fixing wrap issue for smaller screens

--- a/factory/static/stylesheets/sass/main.sass
+++ b/factory/static/stylesheets/sass/main.sass
@@ -129,6 +129,9 @@ input
 	padding-right: 0px
 	padding-bottom: 5px
 
+.tablet-12
+	padding-bottom: 10px
+
 .footer-row
 	margin-right: 20px
 	margin-left: 20px
@@ -149,11 +152,23 @@ input
 	.footeraddress
 		text-align: center
 
+@media only screen and (max-width: 48em) and (orientation: landscape)
+  	.tablet-12
+        -ms-flex: 0 0 100%
+        flex: 0 0 100%
+        max-width: 100%
+
 @media only screen and (min-width: 62em) //tablets (medium)
 	.starlogo
 		@include logo(50px, "../../img/BahaiFaithwithStar.png", center, 200px 40px)
 	.plain-column
-		padding: 0px
+		padding: 0px   
+
+@media only screen and (max-width: 54em) and (orientation: portrait)
+  	.tablet-12
+        -ms-flex: 0 0 100%
+        flex: 0 0 100%
+        max-width: 100%
 
 @media only screen and (min-width: 75em) //laptops and desktops (large)
 	.starlogo
